# fastcpy

./: .gitmodules  CMakeLists.txt  README.md  build.bat  cpucacheinfo_new.c  cpuid指令说明.md  fastcpy_bench.cpp  fastcpy_old.7z  fastcpy_test.cpp  memcpy_bench.h  memmove-vec-unaligned-erms.S  strcpy-avx2.S  实现最快的memcpy函数.md
AVX-Memmove/: CMakeLists.txt  avxmem.h  memcpy.c  memmove.c
FastMemcpy/: CMakeLists.txt  FastMemcpy.cpp  FastMemcpy.h  FastMemcpy_Avx.cpp
ck_memcpy/: CMakeLists.txt  memcpy-impl.cpp  memcpy-impl.h  memcpy_jart.S  memcpy_jart.c  memcpy_kernel.c
dylib/: libfastcpy.exp  libfastcpy.lib  libtfastcpy.exp  libtfastcpy.lib
dylibreloc/: CMakeLists.txt  Makefile  README.md  build.bat  dylibreloc.c  dylibreloc.h  fastcpy.h  stdatomic_def.h  tfastcpy.h
dylibreloc/dylib/: libtfastcpy.lib
dylibreloc/lib/: libtfastcpy.lib
fastcpy/: CMakeLists.txt  Makefile  fast_stpcpy.S  fastcpy.c  fastcpy.h  libfastcpy.def  libtfastcpy.def  memcpy_glibc.c  memcpy_glibc.h  memcpy_glibc_large.c  test_copy_large.c  test_copy_medium.c  test_copy_tiny.c  x86asm_def.h
include/: malloc_user.h
lib/: libfastcpy.lib  libtfastcpy.lib
memcpy-amd64/: CMakeLists.txt  README.md  memcpy.cpp  memcpy.h
rte_memcpy/: CMakeLists.txt  rte_memcpy.c  rte_memcpy.h
src/: malloc_user.cpp
